src/scene/surfaceitem.h
@@ -54,6 +54,8 @@ public:
 
     virtual ContentType contentType() const;
 
+    virtual void freeze();
+
 Q_SIGNALS:
     void damaged();
 
